--- a/crates/mattrax/Cargo.toml
+++ b/crates/mattrax/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 tokio-stream = "0.1.14"
 getrandom = "0.2.12"
+rcgen = "0.12.1"
