--- a/forge/package.json
+++ b/forge/package.json
@@ -8,7 +8,8 @@
     "build": "vinxi build",
     "start": "vinxi start",
     "stats": "pnpm build && open stats.html",
-    "vbuild": "NITRO_PRESET=vercel_edge vinxi build"
+    "vbuild": "NITRO_PRESET=vercel_edge vinxi build",
+    "cbuild": "NITRO_PRESET=cloudflare_edge vinxi build"
   },
   "dependencies": {
     "@kobalte/core": "^0.12.1",
