Windows MDM enrollment in Rust

--- a/crates/mattrax/Cargo.toml
+++ b/crates/mattrax/Cargo.toml
@@ -21,4 +21,7 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 tokio-stream = "0.1.14"
 getrandom = "0.2.12"
-rcgen = "0.12.1"
+rcgen = { version = "0.12.1", features = ["x509-parser"] }
+base64 = "0.21.7"
+sha1 = "0.10.6"
+hex = "0.4.3"
