--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 resolver = "2"
 members = ["./crates/*"]
+
+[patch.crates-io]
+# TODO: This is likely a security risk, will fix it properly once the MVP is out.
+# TODO: This patch is from the unreleased `0.13.0` but I patched it to lie and pretend to be `0.21.1`
+rcgen = { git = "https://github.com/oscartbeaumont/rcgen", branch = "insecure-skip-invalid-attrs" }
