--- a/forge/package.json
+++ b/forge/package.json
@@ -18,6 +18,7 @@
     "@mattrax/policies": "workspace:^",
     "@solid-mediakit/trpc": "^1.0.2",
     "@solid-primitives/context": "^0.2.2",
+    "@solid-primitives/event-bus": "^1.0.9",
     "@solid-primitives/event-listener": "^2.3.1",
     "@solid-primitives/memo": "^1.3.6",
     "@solid-primitives/pagination": "^0.2.10",
