--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -19,6 +19,7 @@
     "@react-email/button": "^0.0.13",
     "@react-email/components": "0.0.14",
     "@react-email/html": "^0.0.7",
+    "@react-email/tailwind": "^0.0.14",
     "react": "^18.2.0",
     "react-email": "2.0.0"
   },
