--- a/apps/mattraxd/Cargo.toml
+++ b/apps/mattraxd/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-mattrax-utils = { path = "../utils" }
+mattrax-utils = { path = "../../crates/utils" }
 
 clap = { version = "4.5.0", features = ["derive"] }
 tracing-subscriber = "0.3.18"
