add policy versions table

--- a/apps/email/tsconfig.json
+++ b/apps/email/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -12,6 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "composite": true,
     "plugins": [{ "name": "next" }],
     "paths": {
       "~/*": ["./*"]
