--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -11,11 +11,15 @@ mattrax-utils = { path = "../../crates/utils" }
 
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-axum = { version = "0.6.20", features = ["http2", "macros", "ws"] }
-axum-server = { version = "0.5.1", features = ["tokio-rustls", "rustls"] }
-clap = { version = "4.4.8", features = ["derive"] }
-rustls-acme = { version = "0.7.7", features = ["axum"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+clap = { version = "4.4.8", features = ["derive"] }
+axum = { version = "0.7.4", features = ["http2", "macros", "ws"] }
+rustls-acme = { version = "0.7.7", features = ["tokio"] }
+rustls = "0.22.2"
+tower = "0.4.13"
+hyper = { version = "1.1.0", features = ["http1", "http2", "server"] }
+tokio-util = { version = "0.7.10", features = ["compat"] }
+hyper-util = { version = "0.1.3", features = ["http1", "http2", "server-auto", "tokio"] }
 thiserror = "1.0.56"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
