--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -12,20 +12,25 @@ mattrax-utils = { path = "../../crates/utils" }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-clap = { version = "4.4.8", features = ["derive"] }
+clap = { version = "4.5.0", features = ["derive"] }
 axum = { version = "0.7.4", features = ["http2", "macros", "ws"] }
-rustls-acme = { version = "0.7.7", features = ["tokio"] }
+rustls-acme = { version = "0.9.2", features = ["tokio"] }
 rustls = "0.22.2"
 tower = "0.4.13"
 hyper = { version = "1.1.0", features = ["http1", "http2", "server"] }
 tokio-util = { version = "0.7.10", features = ["compat"] }
-hyper-util = { version = "0.1.3", features = ["http1", "http2", "server-auto", "tokio"] }
-thiserror = "1.0.56"
+hyper-util = { version = "0.1.3", features = [
+    "http1",
+    "http2",
+    "server-auto",
+    "tokio",
+] }
+thiserror = "1.0.57"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 tokio-stream = "0.1.14"
 getrandom = "0.2.12"
-rcgen = { version = "0.13.0", features = ["x509-parser"] }
+rcgen = { version = "=0.13.0", features = ["x509-parser"] }
 base64 = "0.21.7"
 sha1 = "0.10.6"
 hex = "0.4.3"
