--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ members = ["apps/mattrax", "apps/mattraxd", "crates/*"]
 # TODO: This is likely a security risk, will fix it properly once the MVP is out.
 # TODO: This patch is from the unreleased `0.13.0` but I patched it to lie and pretend to be `0.21.1`
 rcgen = { git = "https://github.com/oscartbeaumont/rcgen", rev = "718f072790b36667eb84b1604f11dd279a448923" }
+# TODO: Waiting for https://github.com/FlorianUekermann/rustls-acme/pull/49 or my own PR cause that one is stale.
+rustls-acme = { git = "https://github.com/oscartbeaumont/rustls-acme", rev = "f97fef46ed4ba6480f97719dc3a06181bc8ebea3" }
