--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -43,3 +43,4 @@ mysql_common = { version = "=0.31.0", features = [
     "chrono",
 ] } # This is a dependency of `mysql_async`
 chrono = { version = "0.4.34", features = ["serde"] }
+futures = { version = "0.3.30", default-features = false }
