--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,10 +43,13 @@ jobs:
         with:
           zig-version: 0.11.0
 
-      - name: Install Cargo Lambda
+      - name: Install 'cargo-zigbuild'
         run: |
           curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
           cargo binstall --no-confirm cargo-zigbuild
+
+      - name: Add 'aarch64-unknown-linux-gnu' target
+        run: rustup target add aarch64-unknown-linux-gnu
 
       - name: Build Rust
         run: cargo zigbuild --locked --release -p mattrax --target aarch64-unknown-linux-gnu
