--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
 PROD_URL=http://localhost:3000
+MDM_URL=http://localhost:8005
 EMAIL_URL=http://localhost:3002
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
 STRIPE_PUBLISHABLE_KEY=
