--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -19,5 +19,9 @@
     "solid-js": "^1.8.15",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
