--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,7 @@ jobs:
         run: |
           # The Rust cache action is not happy with `cargo bininstall` for some reason and this is quick enough we don't care about caching it
           export CARGO_HOME=$HOME/.cargo2
+          export PATH=$CARGO_HOME/bin:$PATH
           mkdir -p $CARGO_HOME
           echo "Starting installation..."
           curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
