--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "patchedDependencies": {
       "@solid-mediakit/trpc@1.0.2": "patches/@solid-mediakit__trpc@1.0.2.patch",
       "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
-      "@solidjs/router@0.12.0": "patches/@solidjs__router@0.12.0.patch"
+      "@solidjs/router@0.12.0": "patches/@solidjs__router@0.12.0.patch",
+      "@tanstack/solid-query@5.20.2": "patches/@tanstack__solid-query@5.20.2.patch"
     }
   }
 }
