--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,16 +2,12 @@ name: Deploy
 
 on:
   push:
+    branches: [main]
     paths:
       - "**/*.rs"
       - "**/Cargo.toml"
       - "Cargo.lock"
-  pull_request:
-    paths:
-      - "**/*.rs"
-      - "**/Cargo.toml"
-      - "Cargo.lock"
-  merge_group:
+  workflow_dispatch:
 
 jobs:
   # TODO: Remove all Go from this and cleanup
