--- a/.github/workflows/vercel-landing.yaml
+++ b/.github/workflows/vercel-landing.yaml
@@ -5,6 +5,10 @@ on:
     branches: [main]
     paths:
       - "apps/landing/**"
+  pull_request:
+    branches: [main]
+    paths:
+      - "apps/landing/**"
   workflow_dispatch:
 
 jobs:
@@ -19,9 +23,15 @@ jobs:
           version: latest
 
       - name: Deploy to Vercel
-        run: npx vercel --token ${VERCEL_TOKEN} --prod
         working-directory: ./apps/landing
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: prj_olckIYRW5BTEMCFdObKOmsBKv9gE
           VERCEL_ORG_ID: St9DAPMLqW2wVV3u9XxhUcE1
+        run: |
+          args=()
+          if [ $GITHUB_REF = "main" ]; then
+              echo "Deploying as production build!"
+              args+=(--prod)
+          fi
+          npx vercel --token ${VERCEL_TOKEN} "${args[@]}"
