--- a/.github/workflows/vercel-email.yaml
+++ b/.github/workflows/vercel-email.yaml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm i
 
       - name: Deploy to Vercel
-        working-directory: ./apps/email
+        # working-directory: ./apps/email
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: prj_bxxgLnEGQNRkURcgnMmDOXNtKjSA
