--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -46,3 +46,5 @@ mysql_common = { version = "=0.31.0", features = [
 chrono = { version = "0.4.34", features = ["serde"] }
 futures = { version = "0.3.30", default-features = false }
 cuid2 = "0.1.2"
+time = "0.3.34"
+urlencoding = "2.1.3"
