--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -48,3 +48,4 @@ futures = { version = "0.3.30", default-features = false }
 cuid2 = "0.1.2"
 time = "0.3.34"
 urlencoding = "2.1.3"
+ms-mdm = { path = "../../crates/ms-mdm" }
