--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -14,7 +14,16 @@
   "dependencies": {
     "@kobalte/core": "^0.12.1",
     "@kobalte/tailwindcss": "^0.9.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.2",
+    "@mattrax/drizzle-to-rs": "workspace:^",
+    "@mattrax/email": "workspace:^",
+    "@mattrax/mdm": "workspace:^",
+    "@mattrax/ms-graph": "workspace:^",
     "@mattrax/policies": "workspace:^",
+    "@mattrax/policy": "workspace:^",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@planetscale/database": "^1.16.0",
+    "@react-email/render": "^0.0.12",
     "@solid-mediakit/trpc": "^1.0.2",
     "@solid-primitives/context": "^0.2.2",
     "@solid-primitives/date": "^2.0.19",
@@ -24,6 +33,7 @@
     "@solid-primitives/pagination": "^0.2.10",
     "@solid-primitives/storage": "^2.1.2",
     "@solidjs/router": "^0.12.0",
+    "@t3-oss/env-core": "^0.9.2",
     "@tanstack/query-broadcast-client-experimental": "^5.20.2",
     "@tanstack/query-sync-storage-persister": "^5.20.2",
     "@tanstack/solid-form": "^0.13.5",
@@ -34,45 +44,36 @@
     "@tanstack/zod-form-adapter": "^0.13.5",
     "@thisbeyond/solid-dnd": "^0.7.5",
     "@trpc/client": "^10.45.1",
+    "@trpc/server": "^10.45.1",
+    "aws4fetch": "^1.0.17",
+    "base58": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "codejar": "^4.2.0",
     "dayjs": "^1.11.10",
-    "prism-code-editor": "^3.0.0",
-    "prism-themes": "^1.9.0",
-    "prismjs": "^1.29.0",
-    "solid-icons": "^1.1.0",
-    "solid-js": "^1.8.14",
-    "solid-sonner": "^0.2.4",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
-    "ts-pattern": "^5.0.6",
-    "vinxi": "^0.3.0",
-    "zod": "^3.22.4",
-    "@lucia-auth/adapter-drizzle": "^1.0.2",
-    "@mattrax/drizzle-to-rs": "workspace:^",
-    "@mattrax/email": "workspace:^",
-    "@mattrax/mdm": "workspace:^",
-    "@mattrax/ms-graph": "workspace:^",
-    "@mattrax/policy": "workspace:^",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@planetscale/database": "^1.16.0",
-    "@react-email/render": "^0.0.12",
-    "@t3-oss/env-core": "^0.9.2",
-    "@trpc/server": "^10.45.1",
-    "aws4fetch": "^1.0.17",
-    "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
     "h3": "^1.10.1",
     "hono": "^4.0.1",
     "lucia": "^3.0.1",
     "oslo": "^1.1.2",
+    "prism-code-editor": "^3.0.0",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "stripe": "^14.16.0"
+    "solid-icons": "^1.1.0",
+    "solid-js": "^1.8.14",
+    "solid-sonner": "^0.2.4",
+    "stripe": "^14.16.0",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "ts-pattern": "^5.0.6",
+    "vinxi": "^0.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.182",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/prismjs": "^1.26.3",
     "autoprefixer": "^10.4.17",
@@ -84,7 +85,6 @@
     "vite": "^5.1.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "^2.9.1",
-    "vite-tsconfig-paths": "^4.3.1",
-    "@microsoft/microsoft-graph-types": "^2.40.0"
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
