Windows enrollment auth + SOAP parsing

--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -51,6 +51,7 @@
     "drizzle-orm": "^0.29.3",
     "h3": "^1.10.1",
     "hono": "^4.0.1",
+    "jose": "^5.2.2",
     "lucia": "^3.0.1",
     "oslo": "^1.1.2",
     "prism-code-editor": "^3.0.0",
