--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -9,6 +9,8 @@ default-run = "mattrax"
 [dependencies]
 mattrax-utils = { path = "../../crates/utils" }
 better-acme = { path = "../../crates/better-acme" }
+ms-mdm = { path = "../../crates/ms-mdm" }
+ms-mde = { path = "../../crates/ms-mde" }
 
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -48,4 +50,6 @@ futures = { version = "0.3.30", default-features = false }
 cuid2 = "0.1.2"
 time = "0.3.34"
 urlencoding = "2.1.3"
-ms-mdm = { path = "../../crates/ms-mdm" }
+hmac = "0.12.1"
+jwt = "0.16.0"
+sha2 = "0.10.8"
