--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -22,6 +22,7 @@
     "@mattrax/ms-graph": "workspace:^",
     "@mattrax/policies": "workspace:^",
     "@mattrax/policy": "workspace:^",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
     "@react-email/render": "^0.0.12",
