`docs.mattrax.app`

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "pnpm --filter @mattrax/forge dev",
     "landing": "pnpm --filter @mattrax/landing --",
     "email": "pnpm --filter @mattrax/email --",
+    "doc": "pnpm --filter @mattrax/docs --",
     "db:push": "drizzle-kit push:mysql && bun run ./apps/forge/src/db/rust.ts",
     "db:studio": "drizzle-kit studio",
     "db:gen": "bun run ./apps/forge/src/db/rust.ts",
