--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "codejar": "^4.2.0",
+    "cookie-es": "^1.0.0",
     "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.3",
     "h3": "^1.10.1",
