--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -32,9 +32,10 @@
     "@solid-primitives/date": "^2.0.19",
     "@solid-primitives/event-bus": "^1.0.9",
     "@solid-primitives/event-listener": "^2.3.1",
+    "@solid-primitives/lifecycle": "^0.0.101",
     "@solid-primitives/memo": "^1.3.6",
     "@solid-primitives/storage": "^2.1.2",
-    "@solidjs/router": "^0.12.0",
+    "@solidjs/router": "^0.12.4",
     "@t3-oss/env-core": "^0.9.2",
     "@tanstack/query-broadcast-client-experimental": "^5.20.2",
     "@tanstack/solid-form": "^0.13.5",
