--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -34,6 +34,7 @@
     "@solid-primitives/event-listener": "^2.3.1",
     "@solid-primitives/lifecycle": "^0.0.101",
     "@solid-primitives/memo": "^1.3.6",
+    "@solid-primitives/scheduled": "^1.4.2",
     "@solid-primitives/storage": "^2.1.2",
     "@solidjs/router": "^0.12.4",
     "@t3-oss/env-core": "^0.9.2",
