--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -68,6 +68,7 @@
     "stripe": "^14.16.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "ts-pattern": "^5.0.6",
     "vinxi": "^0.3.0",
