--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "@solid-mediakit/trpc@1.0.2": "patches/@solid-mediakit__trpc@1.0.2.patch",
-      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
-      "@tanstack/solid-query@5.20.2": "patches/@tanstack__solid-query@5.20.2.patch"
+      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch"
     }
   }
 }
