--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -26,7 +26,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
     "@react-email/render": "^0.0.12",
-    "@solid-mediakit/trpc": "^1.0.2",
+    "@solid-mediakit/trpc": "^2.0.2",
     "@solid-primitives/context": "^0.2.2",
     "@solid-primitives/date": "^2.0.19",
     "@solid-primitives/event-bus": "^1.0.9",
@@ -36,10 +36,11 @@
     "@solid-primitives/scheduled": "^1.4.2",
     "@solid-primitives/storage": "^2.1.2",
     "@solidjs/router": "^0.12.4",
+    "@solidjs/start": "^0.6.1",
     "@t3-oss/env-core": "^0.9.2",
     "@tanstack/query-broadcast-client-experimental": "^5.20.2",
     "@tanstack/solid-form": "^0.13.5",
-    "@tanstack/solid-query": "^5.20.2",
+    "@tanstack/solid-query": "^5.25.0",
     "@tanstack/solid-query-devtools": "^5.20.2",
     "@tanstack/solid-query-persist-client": "^5.20.2",
     "@tanstack/solid-table": "^8.11.8",
