--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# openssl rand -hex 24
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
 PROD_URL=http://localhost:3000
