--- a/apps/forge/tsconfig.json
+++ b/apps/forge/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "compileroptions": {
+  "compilerOptions": {
     "outDir": "./dist",
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
