--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -71,7 +71,7 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "ts-pattern": "^5.0.8",
-    "vinxi": "0.3.10",
+    "vinxi": "^0.3.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
