--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -9,7 +9,8 @@
     "start": "vinxi start",
     "stats": "pnpm build && open stats.html",
     "vbuild": "NITRO_PRESET=vercel_edge vinxi build",
-    "cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
+    "cbuild": "NITRO_PRESET=cloudflare_pages vinxi build",
+    "build:cf": "NITRO_PRESET=cloudflare_pages vinxi build"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.0",
@@ -73,6 +74,7 @@
     "tailwindcss": "^3.4.1",
     "ts-pattern": "^5.0.8",
     "vinxi": "=0.3.4",
+    "unenv": "^1.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
