--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -73,7 +73,7 @@
     "tailwindcss": "^3.4.1",
     "ts-pattern": "^5.0.8",
     "unenv": "^1.9.0",
-    "vinxi": "=0.3.4",
+    "vinxi": "0.3.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
