`@mattrax/ui` + waitlist backend closes #214

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     { "path": "./packages/drizzle-to-rs" },
     { "path": "./packages/mdm" },
     { "path": "./packages/policy" },
-    { "path": "./packages/policies" }
+    { "path": "./packages/policies" },
+    { "path": "./packages/ui" }
   ],
   "compilerOptions": {
     "incremental": true,
