--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -21,6 +21,7 @@
     "@mattrax/ms-graph": "workspace:^",
     "@mattrax/policies": "workspace:^",
     "@mattrax/policy": "workspace:^",
+    "@mattrax/ui": "workspace:^",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
