--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ ENTRA_CLIENT_SECRET=
 FROM_ADDRESS=console
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# Used for landing only
+MATTRAX_CLOUD_ORIGIN=http://localhost:3000 # Should point to `apps/forge`
