--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/solid-js": "^4.0.1",
 		"@astrojs/tailwind": "^5.1.0",
 		"@fontsource/inter": "^5.0.17",
+		"@mattrax/ui": "workspace:^",
 		"@solidjs/router": "^0.13.0",
 		"astro": "^4.4.15",
 		"solid-js": "^1.8.15",
