--- a/biome.json
+++ b/biome.json
@@ -2,11 +2,20 @@
 	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
 	"files": {
 		"include": [
-			"apps/forge/src/**/*.js",
-			"apps/forge/src/**/*.ts",
-			"apps/forge/src/**/*.tsx"
+			"apps/*/**/*.js",
+			"apps/*/**/*.ts",
+			"apps/*/**/*.tsx",
+			"apps/*/*.js",
+			"apps/*/*.ts",
+			"apps/*/*.tsx",
+			"packages/*/**/*.js",
+			"packages/*/**/*.ts",
+			"packages/*/**/*.tsx",
+			"packages/*/*.js",
+			"packages/*/*.ts",
+			"packages/*/*.tsx"
 		],
-		"ignore": [".next", "auto-import.d.ts"]
+		"ignore": [".next", "auto-import.d.ts", "node_modules", "dist"]
 	},
 	"organizeImports": {
 		"enabled": true
