--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,19 +5,12 @@
 	"private": true,
 	"sideEffects": false,
 	"main": "./src/index.ts",
+	"types": "./src/index.ts",
 	"exports": {
-		".": {
-			"import": "./src/index.ts",
-			"types": "./src/index.ts"
-		},
-		"./forms": {
-			"import": "./src/forms/index.ts",
-			"types": "./src/forms/index.ts"
-		},
-		"./lib": {
-			"import": "./src/lib/index.ts",
-			"types": "./src/lib/index.ts"
-		}
+		".": "./src/index.ts",
+		"./forms": "./src/forms/index.tsx",
+		"./lib": "./src/lib/index.ts",
+		"./tailwind": "./tailwind.js"
 	},
 	"typesVersions": {
 		"*": {
