--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js"
-  }
+	"extends": "astro/tsconfigs/strict",
+	"compilerOptions": {
+		"jsx": "preserve",
+		"jsxImportSource": "solid-js",
+		"types": ["@mattrax/ui/types"]
+	}
 }
