Revert "more formatting + no more solid-icons (#217)"
This reverts commit 1965363f563341041b1f3197d67adad750905aee.

--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -1,8 +1,7 @@
 {
-	"extends": "astro/tsconfigs/strict",
-	"compilerOptions": {
-		"jsx": "preserve",
-		"jsxImportSource": "solid-js",
-		"types": ["@mattrax/ui/types"]
-	}
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
+  }
 }
