--- a/apps/forge/tsconfig.json
+++ b/apps/forge/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./dist",
 		"jsx": "preserve",
+		"noEmit": true,
 		"jsxImportSource": "solid-js",
 		"types": ["vinxi/client", "vite/client", "@mattrax/ui/types"],
 		"paths": {
