--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,10 +4,10 @@
 	"type": "module",
 	"private": true,
 	"sideEffects": false,
-	"main": "./src/index.ts",
-	"types": "./src/index.ts",
+	"main": "./src/index.tsx",
+	"types": "./src/index.tsx",
 	"exports": {
-		".": "./src/index.ts",
+		".": "./src/index.tsx",
 		"./forms": "./src/forms/index.tsx",
 		"./lib": "./src/lib/index.ts",
 		"./tailwind": "./tailwind.js",
