--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -8,6 +8,7 @@
 		"start": "vinxi start"
 	},
 	"devDependencies": {
+		"@iconify/json": "^2.2.190",
 		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"autoprefixer": "^10.4.18",
@@ -16,6 +17,7 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.17",
 		"@fontsource/inter": "^5.0.17",
+		"@kobalte/core": "^0.12.3",
 		"@mattrax/ui": "workspace:^",
 		"@solidjs/router": "^0.13.0",
 		"@solidjs/start": "^0.7.2",
