--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -23,7 +23,7 @@
 		"@solidjs/start": "^0.7.5",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.15",
-		"vinxi": "^0.3.10",
+		"vinxi": "=0.3.4",
 		"vite": "^5.1.5"
 	}
 }
