--- a/apps/forge/package.json
+++ b/apps/forge/package.json
@@ -70,7 +70,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss": "^3.4.1",
 		"ts-pattern": "^5.0.8",
-		"vinxi": "^0.3.10",
+		"vinxi": "=0.3.4",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
