--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@kobalte/core": "^0.12.4",
 		"@kobalte/tailwindcss": "^0.9.0",
+		"@mattrax/ui": "workspace:^",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/deep": "^0.2.7",
 		"@solid-primitives/storage": "^2.1.4",
