--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -36,7 +36,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-pattern": "^5.0.8",
-		"vinxi": "^0.3.10",
+		"vinxi": "=0.3.4",
 		"vite-tsconfig-paths": "^4.3.2",
 		"xml": "^1.0.1",
 		"xml2js": "^0.6.2",
@@ -44,6 +44,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.6.1",
+		"@iconify/json": "^2.2.190",
 		"@tauri-apps/cli": "^1.5.11",
 		"@types/plist": "^3.0.5",
 		"@types/xml": "^1.0.11",
