--- a/apps/configure/tsconfig.json
+++ b/apps/configure/tsconfig.json
@@ -1,31 +1,15 @@
 {
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"target": "ES2020",
-		"useDefineForClassFields": true,
-		"module": "ESNext",
-		"lib": ["ES2020", "DOM", "DOM.Iterable"],
-		"skipLibCheck": true,
-
-		/* Bundler mode */
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
 		"jsx": "preserve",
+		"noEmit": true,
 		"jsxImportSource": "solid-js",
-
-		/* Linting */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true,
-
-		"types": ["vite/client"],
+		"types": ["vinxi/client", "vite/client", "@mattrax/ui/types"],
 		"paths": {
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["src"],
-	"references": [{ "path": "./tsconfig.node.json" }]
+	"include": ["src/"],
+	"exclude": ["node_modules", "dist"],
+	"references": [{ "path": "../../packages/ui" }]
 }
