--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
 	},
 	"editor.codeActionsOnSave": {
 		"quickfix.biome": "explicit"
-	}
+	},
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
