--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -24,6 +24,7 @@
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.15",
 		"vinxi": "=0.3.4",
-		"vite": "^5.1.5"
+		"vite": "^5.1.5",
+		"zod": "^3.22.4"
 	}
 }
